# jedi_obsimul

./: .gitignore  CMakeLists.txt  cmake_it  components.yaml
.github/: CODEOWNERS
etc/history/: .gitignore  HISTORY_JOSSE.RC  README  Sampler Design.docx  aer2D_vars.vl  aer3Dp_vars.vl  aerNv_vars.vl  aerSampler_vars.vl  ana_vars.pl  asmSampler_vars.vl  brs_vars.vl  buda_vars.vl  budi_vars.vl  cldSampler_vars.vl  crtmSampler.xlsx  crtmSampler_MJ_IM_YZ.xlsx  crtmSampler_vars.vl  crtm_mw.vl  gwd_vars.vl  instrument_fields.vl  moist_vars.vl  press_26levels.vl  press_48levels.vl  prog_vars.vl  surf_vars.vl  turb_vars.vl  warning.vl
etc/history/hold/: HISTORY_stretched.rc  crtm_ir.vl  crtm_winds.vl
etc/pbl_obsys/: 2030s_Obs_v20241112.xlsx  README.md  crtmSampler_MJ_IM_YZ.xlsx
src/: CMakeLists.txt
src/Shared/: CMakeLists.txt
src/obsimul/: __init__.py
